--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "petri-nets.doc.tar.xz": ee7955debf5b6ee82f777275d6c0c3a56488ed35
-  "petri-nets.tar.xz": 70adb13c5e40216e1dbfcb3d669eacf8e97721a0
+  petri-nets.doc.tar.xz: 5f1ec5fc2de10267eae509cb868abdfa1b20d2f1
+  petri-nets.tar.xz: 9e76027f56b41ece8d473ff9d27b1722226b1ce4
